Add release notes for Foreman 3.9

--- a/_includes/manuals/3.9/1.2_release_notes.md
+++ b/_includes/manuals/3.9/1.2_release_notes.md
@@ -4,6 +4,18 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### New All Hosts page features
+
+This release introduces an experimental new page that will eventually replace the All Hosts page.
+In its first iteration, it includes Host Create and Register buttons, bulk multi-page selection, host deletion, and faster links to each host.
+You can try out the new page via 'Show new host overview page' in Settings.
+After changing the setting, a full browser page reload is required.
+In future releases, more features will be added to the new page, and the old page will eventually be retired.
+
+#### Redis is the default cache type
+
+Default installations will now use Redis configured as the default cache type. Using Redis as the cache has proven to be better performant and does not result in file locking or cache misses.
+
 ### Upgrade warnings
 
 #### `ct_command` and `fcct_command` settings replaced with `(fc)ct_location` and `(fc)ct_arguments`
@@ -20,10 +32,135 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release Notes
 
+### Release notes for 3.9.0
+#### Foreman
+* Revert back 'Change Puppet CA' action ([#36955](https://projects.theforeman.org/issues/36955))
+* Global Registration - ignore output of some commands
+ ([#36938](https://projects.theforeman.org/issues/36938))
+* Set up GHA with matrix to run test on Ruby 2.7 ([#36913](https://projects.theforeman.org/issues/36913))
+* Change foreman-hotproc.conf for new pulpcore 3.39 entrypoint ([#36905](https://projects.theforeman.org/issues/36905))
+* [Global Registration] -  After expiration of the token should we raise with token expiration message rather abstract message ([#36889](https://projects.theforeman.org/issues/36889))
+* Include LookupValue permissions in fixtures ([#36880](https://projects.theforeman.org/issues/36880))
+* Hosts page should redirect to new hosts on new_hosts_page setting ([#36869](https://projects.theforeman.org/issues/36869))
+* Specific key breaks cache-method ([#36842](https://projects.theforeman.org/issues/36842))
+* Switch from Time.now to process gettime ([#36841](https://projects.theforeman.org/issues/36841))
+* Update sidekiq to 6.5+ ([#36819](https://projects.theforeman.org/issues/36819))
+* Redis cache can result in silent nil cache reads ([#36815](https://projects.theforeman.org/issues/36815))
+* Ship PCP hotproc configuration with foreman ([#36805](https://projects.theforeman.org/issues/36805))
+* Some events are not visible even being triggered ([#36796](https://projects.theforeman.org/issues/36796))
+* Reports parser fails for Salt reports ([#36786](https://projects.theforeman.org/issues/36786))
+* Add description search in the settings search bar
+ ([#36711](https://projects.theforeman.org/issues/36711))
+* Valid error message should be display on page if expected entry not found in Administer -&gt; Settings Search box
+ ([#36705](https://projects.theforeman.org/issues/36705))
+* remote_execution_ssh_keys does not work as expected with external (kerberos) users ([#36673](https://projects.theforeman.org/issues/36673))
+* Inconsistent configuration for Redis as used by Dynflow ([#36541](https://projects.theforeman.org/issues/36541))
+* Allow gathering information on deleted records ([#36466](https://projects.theforeman.org/issues/36466))
+* Provisioning setup ([#36427](https://projects.theforeman.org/issues/36427))
+* Menu navigation - Search & go component ([#35601](https://projects.theforeman.org/issues/35601))
+* Ping API should expose an overall status that includes Redis ([#31545](https://projects.theforeman.org/issues/31545))
+
+#### Foreman - Compute resources - Rackspace
+* Drop last remain of the Rackspace CR ([#36816](https://projects.theforeman.org/issues/36816))
+
+#### Foreman - Facts
+* Host registration fails with error "Attached to can't be blank" when the VLAN name includes UPPERCASE letters
+ ([#36934](https://projects.theforeman.org/issues/36934))
+* Use case statement in RHSM fact parser ([#36763](https://projects.theforeman.org/issues/36763))
+
+#### Foreman - Host creation
+* New All Hosts page - Add delete & create ([#36867](https://projects.theforeman.org/issues/36867))
+* Drop append domain names setting ([#36160](https://projects.theforeman.org/issues/36160))
+
+#### Foreman - Internationalization
+* Optimize apipie-dsl translate function ([#36839](https://projects.theforeman.org/issues/36839))
+* Foreman host column registration translates headers during initialization ([#36575](https://projects.theforeman.org/issues/36575))
+
+#### Foreman - JavaScript stack
+* Fix linter issue in DateTimePicker.js ([#36933](https://projects.theforeman.org/issues/36933))
+* Import buffer in globalIdHelpers.js ([#36932](https://projects.theforeman.org/issues/36932))
+* Remove workaround for fixing layout rendering  ([#36860](https://projects.theforeman.org/issues/36860))
+* Add PF4 table ([#32748](https://projects.theforeman.org/issues/32748))
+
+#### Foreman - Plugin integration
+* Pass host results to REX in slot ([#36892](https://projects.theforeman.org/issues/36892))
+
+#### Foreman - Rails
+* Use runuser instead of su to run rake as the foreman user ([#36767](https://projects.theforeman.org/issues/36767))
+
+#### Foreman - Rake tasks
+* Count db:abort_if_pending_migrations as a setup rake task ([#36774](https://projects.theforeman.org/issues/36774))
+
+#### Foreman - Reporting
+* The  Date and time options are overlapping in the "Generate at" option when generating the Errata report and Time is showing as the current time ([#36915](https://projects.theforeman.org/issues/36915))
+* Subscription entitlement report broken for SCA users ([#36826](https://projects.theforeman.org/issues/36826))
+* Reports origin icon not shown for Salt reports ([#36799](https://projects.theforeman.org/issues/36799))
+
+#### Foreman - Statistics
+* Report Template output generation can take hours to complete if the template is only about printing different host facts
+ ([#36715](https://projects.theforeman.org/issues/36715))
+
+#### Foreman - Templates
+* Safemode doesn't allow to access 'katello_agent_enabled?' ([#36717](https://projects.theforeman.org/issues/36717))
+* {linux,initrd}efi commands not working with grubaa64.efi ([#36658](https://projects.theforeman.org/issues/36658))
+* kickstart_kernel_options snippet breaks UEFI VLAN tagged provisioning ([#36361](https://projects.theforeman.org/issues/36361))
+
+#### Foreman - Tests
+* Drop invalid test for YAML parsing ([#36930](https://projects.theforeman.org/issues/36930))
+
+#### Foreman - Unattended installations
+* Modify templates to allow for deployment with puppet 8 ([#36939](https://projects.theforeman.org/issues/36939))
+* Satellite 6.12 is still using katello-ca to register hosts during provisioning instead of Gloabl Registration Template ([#36747](https://projects.theforeman.org/issues/36747))
+* Drop Fedora/Red Hat Atomic related code ([#36723](https://projects.theforeman.org/issues/36723))
+* Kickstart in graphical mode runs chvt to the wrong terminal ([#36134](https://projects.theforeman.org/issues/36134))
+
+#### Foreman - Users, Roles and Permissions
+* PATs without expiration date cannot be created through webui ([#36775](https://projects.theforeman.org/issues/36775))
+
+#### Foreman - Web Interface
+* Clear navigation search doesn't clear results ([#36949](https://projects.theforeman.org/issues/36949))
+* Navigation Search doesnt show ansible roles ([#36948](https://projects.theforeman.org/issues/36948))
+* Navigation search menu should be less wide ([#36923](https://projects.theforeman.org/issues/36923))
+* Open bookmarks to the right side ([#36864](https://projects.theforeman.org/issues/36864))
+* Table index page design changes ([#36858](https://projects.theforeman.org/issues/36858))
+* Design the New All Hosts Index page ([#36822](https://projects.theforeman.org/issues/36822))
+* Allow new Table component to be used separately ([#36821](https://projects.theforeman.org/issues/36821))
+* Host details actions kebab can't be closed from plugins ([#36793](https://projects.theforeman.org/issues/36793))
+* Typo in variable name in form for taxonomies ([#36791](https://projects.theforeman.org/issues/36791))
+* Add additional condition for title in PageLayout ([#36783](https://projects.theforeman.org/issues/36783))
+* Register Host page has two titles ([#36734](https://projects.theforeman.org/issues/36734))
+* Documentation links and docs.theforeman.org ([#32848](https://projects.theforeman.org/issues/32848))
+
+#### Installer
+* Make Redis the default cache type ([#36801](https://projects.theforeman.org/issues/36801))
+
+#### Installer - Foreman modules
+* Support Pulpcore 3.39 installations ([#36902](https://projects.theforeman.org/issues/36902))
+* Use HTTP/2 on content proxies to connect to Foreman ([#36854](https://projects.theforeman.org/issues/36854))
+* Allow setting (fc)ct_location ([#36812](https://projects.theforeman.org/issues/36812))
+* Add support for container gateway sqlite timeout tuning ([#36772](https://projects.theforeman.org/issues/36772))
+* Support removal of REX cockpit plugin ([#36090](https://projects.theforeman.org/issues/36090))
+
+#### Installer - foreman-installer script
+* Validate certificates as part of foreman-proxy-certs-generate  ([#36843](https://projects.theforeman.org/issues/36843))
+
+#### Packaging - RPMs
+* Automatically depend on the correct SELinux policy ([#36868](https://projects.theforeman.org/issues/36868))
+
+#### Smart Proxy
+* Add Dependabot Configuration ([#36899](https://projects.theforeman.org/issues/36899))
+* Run foreman-proxy.service with PrivateTmp ([#36890](https://projects.theforeman.org/issues/36890))
+* Raise minimum Ruby version to 2.7 ([#36779](https://projects.theforeman.org/issues/36779))
+
+#### Smart Proxy - Tests
+* Allow clearing the log buffer ([#34163](https://projects.theforeman.org/issues/34163))
+
+*A full list of changes in 3.9.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1765)*
+
 ### Contributors
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Růžička,Alexey Masolov,Archana Kumari,Areyus,Bastian Schmidt,Dyrkon,Eric Helms,Evgeni Golov,Ewoud Kohl van Wijngaarden,Girija Soni,Griffin Sullivan,Ian Ballou,Jeremy Lenz,Joshua Hoblitt,Karolina Malyjurkova,Laura Hild,Leos Stejskal,Manisha Singhal,Marek Hulán,Maria Agaphontzev,Markus Bucher,Maximilian Kolb,Nikos Moumoulidis,Nofar Alfassi,Oleh Fedorenko,Partha Aji,Pat Riehecky,Patrick Creech,Romain Tartière,Ron Lavi,Samir Jha,Sebastian Bublitz,Shimon Shtein,Tim Meusel,Tony James,Trent Anderson,William Bradford Clark
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
