--- a/_includes/manuals/3.8/4.4.1_prov_os.md
+++ b/_includes/manuals/3.8/4.4.1_prov_os.md
@@ -1,5 +1,5 @@
 
-The Operating Systems page (*Hosts -> Operating Systems*) details the OSs known to Foreman, and is the central point that the other required components tie into.
+The Operating Systems page (*Hosts -> Provisioning Setup -> Operating Systems*) details the OSs known to Foreman, and is the central point that the other required components tie into.
 
 #### Creating an Operating System
 
