--- a/_includes/manuals/nightly/4.3.9_smartproxy_tftp.md
+++ b/_includes/manuals/nightly/4.3.9_smartproxy_tftp.md
@@ -42,7 +42,7 @@ The setup is very simple, and may be performed manually if desired.
 6. Make sure */var/lib/tftpboot/grub* and */var/lib/tftpboot/grub2* are both writeable by the foreman proxy user (foreman-proxy).
 7. Verify SELinux labels when using SELinux.
 
-* Note: if CentOS 7 is used, please make sure to edit the URL under Hosts -> Installation Media, to to exclude the $minor version. For example: http://mirror.centos.org/centos/$major/os/$arch
+* Note: if CentOS 7 is used, please make sure to edit the URL under Hosts -> Provisioning Setup -> Installation Media, to to exclude the $minor version. For example: http://mirror.centos.org/centos/$major/os/$arch
 
 ##### Setting Up Foreman
 
