Reflect that foreman-gce was replaced by foreman_google
In Foreman 3.5 the foreman-gce package was dropped and replaced by a
foreman_google plugin.

It doesn't review the existing documentation section, but at least
corrects the pacakage names. I didn't check if foreman-plugin-google is
actually provided on Debian.

--- a/_includes/manuals/3.6/5.2_compute_resources.md
+++ b/_includes/manuals/3.6/5.2_compute_resources.md
@@ -24,7 +24,7 @@ The capabilities vary between implementations, depending on how the compute reso
   </tr>
   <tr>
     <td><a href="/manuals/{{page.version}}/index.html#5.2.4GoogleComputeEngineNotes">Google Compute Engine</a></td>
-    <td>foreman-gce</td>
+    <td>foreman-plugin-google</td>
     <td>no</td>
     <td>yes</td>
     <td>read-only</td>
