--- a/_includes/manuals/3.7/5.2_compute_resources.md
+++ b/_includes/manuals/3.7/5.2_compute_resources.md
@@ -24,7 +24,7 @@ The capabilities vary between implementations, depending on how the compute reso
   </tr>
   <tr>
     <td><a href="/manuals/{{page.version}}/index.html#5.2.4GoogleComputeEngineNotes">Google Compute Engine</a></td>
-    <td>foreman-gce</td>
+    <td>foreman-plugin-google</td>
     <td>no</td>
     <td>yes</td>
     <td>read-only</td>
