Update latest release to Foreman 3.9

--- a/_includes/manuals/3.9/1.2_release_notes.md
+++ b/_includes/manuals/3.9/1.2_release_notes.md
@@ -32,6 +32,16 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release Notes
 
+### Release notes for 3.9.1
+#### Foreman
+* broken link in Register Host documentation  ([#36966](https://projects.theforeman.org/issues/36966))
+
+#### Foreman - Web Interface
+* Table index new button alignment in large screens ([#36963](https://projects.theforeman.org/issues/36963))
+* User dropdown shifted to the left when using foreman with plugins ([#36896](https://projects.theforeman.org/issues/36896))
+
+*A full list of changes in 3.9.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1797)*
+
 ### Release notes for 3.9.0
 #### Foreman
 * Revert back 'Change Puppet CA' action ([#36955](https://projects.theforeman.org/issues/36955))
@@ -161,6 +171,6 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-Adam Růžička,Alexey Masolov,Archana Kumari,Areyus,Bastian Schmidt,Dyrkon,Eric Helms,Evgeni Golov,Ewoud Kohl van Wijngaarden,Girija Soni,Griffin Sullivan,Ian Ballou,Jeremy Lenz,Joshua Hoblitt,Karolina Malyjurkova,Laura Hild,Leos Stejskal,Manisha Singhal,Marek Hulán,Maria Agaphontzev,Markus Bucher,Maximilian Kolb,Nikos Moumoulidis,Nofar Alfassi,Oleh Fedorenko,Partha Aji,Pat Riehecky,Patrick Creech,Romain Tartière,Ron Lavi,Samir Jha,Sebastian Bublitz,Shimon Shtein,Tim Meusel,Tony James,Trent Anderson,William Bradford Clark
+Adam Růžička, Alexey Masolov, Archana Kumari, Areyus, Bastian Schmidt, Dyrkon, Eric Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Girija Soni, Griffin Sullivan, Ian Ballou, Jeremy Lenz, Joshua Hoblitt, Karolina Malyjurkova, Laura Hild, Leos Stejskal, Manisha Singhal, Marek Hulán, Maria Agaphontzev, Markus Bucher, Maximilian Kolb, Nikos Moumoulidis, Nofar Alfassi, Oleh Fedorenko, Partha Aji, Pat Riehecky, Patrick Creech, Romain Tartière, Ron Lavi, Samir Jha, Sebastian Bublitz, Shimon Shtein, Tim Meusel, Tony James, Trent Anderson, William Bradford Clark
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
