Update Foreman 3.10 release notes for RC2

--- a/_includes/manuals/3.10/1.2_release_notes.md
+++ b/_includes/manuals/3.10/1.2_release_notes.md
@@ -34,11 +34,11 @@ Please use other backup types to replace your use of snapshot.
 * Prepare STI usage to be compatible with Ruby 3.0 ([#37087](https://projects.theforeman.org/issues/37087))
 * Replace "apt-key" on Debian/Ubuntu in "global_registration.erb" ([#37034](https://projects.theforeman.org/issues/37034))
 * katello-certs-check should succeed if intermediates are presented without root ([#37021](https://projects.theforeman.org/issues/37021))
-* \`hammer host-registration generate-command\` doesn't accept \`unlimited\` as JWT life time
- ([#36972](https://projects.theforeman.org/issues/36972))
+* \`hammer host-registration generate-command\` doesn't accept \`unlimited\` as JWT life time ([#36972](https://projects.theforeman.org/issues/36972))
 * Registration command should not fail with status 0 ([#36969](https://projects.theforeman.org/issues/36969))
 * Broken link in Register Host documentation  ([#36966](https://projects.theforeman.org/issues/36966))
 * Revert back 'Change Puppet CA' action ([#36955](https://projects.theforeman.org/issues/36955))
+* Global Registration - ignore output of some commands ([#36938](https://projects.theforeman.org/issues/36938))
 * Switch to using terser for minification and compression of JS assets ([#36936](https://projects.theforeman.org/issues/36936))
 * Run Foreman tests on Ruby 3.0 ([#36849](https://projects.theforeman.org/issues/36849))
 * VM tab (legacy UI) shows error in case host is not associated to VM ([#36744](https://projects.theforeman.org/issues/36744))
@@ -57,13 +57,13 @@ Please use other backup types to replace your use of snapshot.
 * Drop append domain names setting ([#36160](https://projects.theforeman.org/issues/36160))
 
 #### Foreman - Inventory
-* Changing the "Show New Host Overview Page" setting is not applied even after reloading the page
- ([#37013](https://projects.theforeman.org/issues/37013))
+* Changing the "Show New Host Overview Page" setting is not applied even after reloading the page ([#37013](https://projects.theforeman.org/issues/37013))
 
 #### Foreman - JavaScript stack
 * Duplicate ids from webpack style ([#37173](https://projects.theforeman.org/issues/37173))
 * Load plugin public folder for webpack ([#37161](https://projects.theforeman.org/issues/37161))
 * "Component name already taken" warnings fix ([#37154](https://projects.theforeman.org/issues/37154))
+* NodeJS 18 and NPM 8 compatibility ([#37134](https://projects.theforeman.org/issues/37134))
 * Update to webpack 5 ([#37102](https://projects.theforeman.org/issues/37102))
 * BreadcrumbBar.test.js missing await ([#37070](https://projects.theforeman.org/issues/37070))
 * EditorView snapshots change because of classnames update ([#37026](https://projects.theforeman.org/issues/37026))
