--- a/_includes/manuals/nightly/3.3.1_rpm_packages.md
+++ b/_includes/manuals/nightly/3.3.1_rpm_packages.md
@@ -2,6 +2,7 @@
 Foreman is packaged for the following RPM based distributions:
 
 * RHEL and derivatives, version 8
+* RHEL and derivatives, version 9
 
 **Note:** The RPM packages are not tested on Rocky Linux or Oracle Linux. The Foreman installation on Rocky Linux or Oracle Linux may or may not work.
 
@@ -28,6 +29,9 @@ To set up the repository, foreman-release packages are provided which add a repo
     # EL8
     dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
     dnf -y module enable foreman:el8
+    
+    # EL9
+    dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el9/x86_64/foreman-release.rpm
 
 ### Signing
 
