--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -35,7 +35,8 @@ $(document).ready(function() {
 To provide specific installation instructions, please select your operating system:
 <select id="upgrade_os" onChange="update_upgrade_os(this);">
   <option value="none">-- select operating system --</option>
-  <option value="el8">CentOS 8 Stream / Red Hat Enterprise Linux 8</option>
+  <option value="el8">CentOS Stream 8 / Red Hat Enterprise Linux 8</option>
+  <option value="el9">CentOS Stream 9 / Red Hat Enterprise Linux 8</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
@@ -56,7 +57,7 @@ Before proceeding, it is necessary to shutdown the Foreman instance.
 <div class="upgrade_os upgrade_os_none">
   <i>No operating system selected.</i>
 </div>
-<div class="upgrade_os upgrade_os_el8">
+<div class="upgrade_os upgrade_os_el8 upgrade_os_el9">
 {% highlight bash %}
 systemctl stop httpd foreman.service foreman.socket dynflow\*
 {% endhighlight %}
@@ -97,6 +98,27 @@ Enable the Foreman module:
 
 {% highlight bash %}
 dnf -y module enable foreman:el8
+{% endhighlight %}
+
+Next upgrade all Foreman packages:
+
+{% highlight bash %}
+dnf upgrade ruby\* foreman\*
+{% endhighlight %}
+</div>
+
+<div class="upgrade_os upgrade_os_el9">
+To upgrade an existing Foreman installation, first update with the
+appropriate foreman-release package:
+
+{% highlight bash %}
+dnf upgrade https://yum.theforeman.org/releases/{{page.version}}/el9/x86_64/foreman-release.rpm
+{% endhighlight %}
+
+Clean up the yum metadata cache:
+
+{% highlight bash %}
+dnf clean metadata
 {% endhighlight %}
 
 Next upgrade all Foreman packages:
@@ -180,7 +202,7 @@ Start the application server. This is redundant if you previously ran `foreman-i
 <div class="upgrade_os upgrade_os_none">
   <i>*No operating system selected.*</i>
 </div>
-<div class="upgrade_os upgrade_os_el8">
+<div class="upgrade_os upgrade_os_el8 upgrade_os_el9">
 {% highlight bash %}
 systemctl start httpd foreman.service foreman.socket
 {% endhighlight %}
