add Ubuntu 22.04 to nightly manual

--- a/_includes/manuals/nightly/3.1.1_supported_platforms.md
+++ b/_includes/manuals/nightly/3.1.1_supported_platforms.md
@@ -18,6 +18,8 @@ The following operating systems are supported by the installer, have packages an
     - EPEL 9 is incompatible, enabling will cause package dependency issue.
 * Ubuntu 20.04 (Focal)
   * Architectures: amd64
+* Ubuntu 22.04 (Jammy)
+  * Architectures: amd64
 * Debian 11 (Bullseye)
   * Architectures: amd64
 
