--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -28,6 +28,7 @@ To provide specific installation instructions, please select your operating syst
   <option value="el9">Enterprise Linux 9</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
+  <option value="ubuntu2204">Ubuntu 22.04 (Jammy)</option>
 </select>
 
 #### Repositories
@@ -120,6 +121,26 @@ echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /et
 {% endhighlight %}
 </div>
 
+<div class="quickstart_os quickstart_os_ubuntu2204">
+  <p>
+    Enable Puppet's 7.x repository:
+  </p>
+
+{% highlight bash %}
+sudo apt-get -y install ca-certificates
+cd /tmp && wget https://apt.puppet.com/puppet7-release-jammy.deb
+sudo apt-get install /tmp/puppet7-release-jammy.deb
+{% endhighlight %}
+
+  <p>Enable the Foreman repositories:</p>
+
+{% highlight bash %}
+sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
+echo "deb http://deb.theforeman.org/ jammy {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
+echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
+{% endhighlight %}
+</div>
+
 #### Downloading the installer
 
 <div class="quickstart_os quickstart_os_none">
@@ -132,7 +153,7 @@ sudo dnf -y install foreman-installer
 {% endhighlight %}
 </div>
 
-<div class="quickstart_os quickstart_os_debian11 quickstart_os_ubuntu2004">
+<div class="quickstart_os quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_ubuntu2204">
 {% highlight bash %}
 sudo apt-get update && sudo apt-get -y install foreman-installer
 {% endhighlight %}
@@ -140,13 +161,13 @@ sudo apt-get update && sudo apt-get -y install foreman-installer
 
 #### Running the installer
 
-<div class="quickstart_os quickstart_os_debian11 quickstart_os_ubuntu2004 alert alert-info">
+<div class="quickstart_os quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_ubuntu2204 alert alert-info">
   Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
 </div>
 
 The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:
 
-<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_el9">
+<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_ubuntu2204 quickstart_os_el8 quickstart_os_el9">
 {% highlight bash %}
 sudo foreman-installer
 {% endhighlight %}
