--- a/_includes/manuals/nightly/3.3.2_debian_packages.md
+++ b/_includes/manuals/nightly/3.3.2_debian_packages.md
@@ -5,6 +5,7 @@ The Foreman packages should work on the following Debian-based Linux distributio
 
 * Debian Linux 11 (Bullseye), amd64
 * Ubuntu Linux 20.04 LTS (Focal Fossa), amd64
+* Ubuntu Linux 22.04 LTS (Jammy Jellyfish), amd64
 
 If you encounter any errors during the installation, [please file a bug report!](/contribute.html#Bugreporting)
 
@@ -17,6 +18,8 @@ Add one of the following lines to your */etc/apt/sources.list* (alternatively in
 deb http://deb.theforeman.org/ bullseye {{page.version}}
 # Ubuntu 20.04 Focal
 deb http://deb.theforeman.org/ focal {{page.version}}
+# Ubuntu 22.04 Jammy
+deb http://deb.theforeman.org/ jammy {{page.version}}
 ```
 
 You may also want some plugins from the plugin repo (required for the Foreman Installer):
