--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -39,6 +39,7 @@ To provide specific installation instructions, please select your operating syst
   <option value="el9">CentOS Stream 9 / Red Hat Enterprise Linux 8</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
+  <option value="ubuntu2204">Ubuntu 22.04 (Jammy)</option>
 </select>
 
 #### Step 1 - Backup
@@ -62,7 +63,7 @@ Before proceeding, it is necessary to shutdown the Foreman instance.
 systemctl stop httpd foreman.service foreman.socket dynflow\*
 {% endhighlight %}
 </div>
-<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004 upgrade_os_ubuntu2204">
 {% highlight bash %}
 systemctl stop apache2 foreman.service foreman.socket dynflow\*
 {% endhighlight %}
@@ -128,7 +129,7 @@ dnf upgrade ruby\* foreman\*
 {% endhighlight %}
 </div>
 
-<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004 upgrade_os_ubuntu2204">
 Upgrading from the last release to {{page.version}} has been tested. Updating
 the packages will upgrade the application and automatically migrate the
 database.
@@ -145,6 +146,12 @@ deb http://deb.theforeman.org/ plugins {{ page.version }}
 <div class="upgrade_os upgrade_os_ubuntu2004">
 {% highlight bash %}
 deb http://deb.theforeman.org/ focal {{ page.version }}
+deb http://deb.theforeman.org/ plugins {{ page.version }}
+{% endhighlight %}
+</div>
+<div class="upgrade_os upgrade_os_ubuntu2204">
+{% highlight bash %}
+deb http://deb.theforeman.org/ jammy {{ page.version }}
 deb http://deb.theforeman.org/ plugins {{ page.version }}
 {% endhighlight %}
 </div>
@@ -207,7 +214,7 @@ Start the application server. This is redundant if you previously ran `foreman-i
 systemctl start httpd foreman.service foreman.socket
 {% endhighlight %}
 </div>
-<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004 upgrade_os_ubuntu2204">
 {% highlight bash %}
 systemctl start apache2 foreman.service foreman.socket
 {% endhighlight %}
