--- a/_includes/manuals/3.10/2.1_quickstart_installation.md
+++ b/_includes/manuals/3.10/2.1_quickstart_installation.md
@@ -25,6 +25,7 @@ To provide specific installation instructions, please select your operating syst
 <select onChange="update_quickstart_os(this);">
   <option value="none">-- select operating system --</option>
   <option value="el8">Enterprise Linux 8</option>
+  <option value="el9">Enterprise Linux 9</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
@@ -45,11 +46,29 @@ sudo dnf -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
 {% endhighlight %}
 </div>
 
+<div class="quickstart_os quickstart_os_el9">
+  <p>
+    Enable Puppet's 7.x repository:
+  </p>
+
+{% highlight bash %}
+sudo dnf -y install https://yum.puppet.com/puppet7-release-el-9.noarch.rpm
+{% endhighlight %}
+</div>
+
 <div class="quickstart_os quickstart_os_el8">
   <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
 sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
+{% endhighlight %}
+</div>
+
+<div class="quickstart_os quickstart_os_el9">
+  <p>Enable the Foreman repositories:</p>
+
+{% highlight bash %}
+sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el9/x86_64/foreman-release.rpm
 {% endhighlight %}
 </div>
 
@@ -107,7 +126,7 @@ echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /et
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_el8">
+<div class="quickstart_os quickstart_os_el8 quickstart_os_el9">
 {% highlight bash %}
 sudo dnf -y install foreman-installer
 {% endhighlight %}
@@ -127,7 +146,7 @@ sudo apt-get update && sudo apt-get -y install foreman-installer
 
 The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:
 
-<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_el9">
 {% highlight bash %}
 sudo foreman-installer
 {% endhighlight %}
