--- a/_includes/manuals/3.10/3.1.1_supported_platforms.md
+++ b/_includes/manuals/3.10/3.1.1_supported_platforms.md
@@ -3,11 +3,19 @@ The following operating systems are supported by the installer, have packages an
 * Red Hat Enterprise Linux 8
   * Architectures: x86_64 only
   * Apply all SELinux-related errata.
-* CentOS 8 Stream
+* Red Hat Enterprise Linux 9
+  * Architectures: x86_64 only
+  * Apply all SELinux-related errata.
+* CentOS Stream 8
   * Architectures: x86_64 only
   * **Note:**
-    - The RPM packages are built on CentOS Linux 8, but tested to work also on CentOS 8 Stream
+    - The RPM packages are built on Red Hat Enterprise Linux 8, but tested to work also on CentOS Stream 8
     - EPEL 8 is incompatible, enabling will cause package dependency issue.
+* CentOS Stream 9
+  * Architectures: x86_64 only
+  * **Note:**
+    - The RPM packages are built on Red Hat Enterprise Linux 9, but tested to work also on CentOS Stream 9
+    - EPEL 9 is incompatible, enabling will cause package dependency issue.
 * Ubuntu 20.04 (Focal)
   * Architectures: amd64
 * Debian 11 (Bullseye)
