add PostgreSQL 13 release note

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -6,6 +6,13 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+#### PostgreSQL upgraded to 13 on Enterprise Linux 8
+
+On Enterprise Linux 8 PostgreSQL is upgraded from 12 to 13, to match the version used on Enterprise Linux 9.
+Users are required to change the DNF module, but the actual upgrade, including data migration, happens when the installer is executed for the first time.
+During the upgrade a backup of the data is created in `/var/lib/pgsql/data-old`.
+This backup can be removed once the upgrade is completed.
+
 ### Deprecations
 
 ### Release Notes
