switch to PostgreSQL 13 module

--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -95,6 +95,12 @@ If the Ruby 2.5 module was previously enabled, it must be reset:
 dnf -y module reset ruby
 {% endhighlight %}
 
+Switch to the PostgreSQL 13 module:
+
+{% highlight bash %}
+dnf -y module switch-to postgresql:13
+{% endhighlight %}
+
 Enable the Foreman module:
 
 {% highlight bash %}
