Update 3.10 release notes for GA

--- a/_includes/manuals/3.10/1.2_release_notes.md
+++ b/_includes/manuals/3.10/1.2_release_notes.md
@@ -28,6 +28,11 @@ Please use other backup types to replace your use of snapshot.
 
 ### Release notes for 3.10.0
 #### Foreman
+* Some APIs / params are not marked as deprecated ([#37274](https://projects.theforeman.org/issues/37274))
+* OS bootfiles API not working because of misspelled class ([#37270](https://projects.theforeman.org/issues/37270))
+* Pull provider installation template crash ([#37193](https://projects.theforeman.org/issues/37193))
+* Race condition in smart proxy test ([#37150](https://projects.theforeman.org/issues/37150))
+* Alphabetical sorting in test broken ([#37132](https://projects.theforeman.org/issues/37132))
 * Unpin adobe/css-tools ([#37128](https://projects.theforeman.org/issues/37128))
 * Clean up old storybook dependencies ([#37127](https://projects.theforeman.org/issues/37127))
 * Replace \`node-sass\` with \`sass\` ([#37126](https://projects.theforeman.org/issues/37126))
@@ -43,15 +48,22 @@ Please use other backup types to replace your use of snapshot.
 * Run Foreman tests on Ruby 3.0 ([#36849](https://projects.theforeman.org/issues/36849))
 * VM tab (legacy UI) shows error in case host is not associated to VM ([#36744](https://projects.theforeman.org/issues/36744))
 * Ubuntu version "nil" is interpreted as "0" ([#36741](https://projects.theforeman.org/issues/36741))
+* iPXE Discovery Only Works On net0 ([#36502](https://projects.theforeman.org/issues/36502))
 
 #### Foreman - API
 * Create API for getting permissions of current user ([#36917](https://projects.theforeman.org/issues/36917))
+
+#### Foreman - Authentication
+* After Foreman installation login page respond with  "Invalid Timezone: Etc/Unknown" ([#37069](https://projects.theforeman.org/issues/37069))
 
 #### Foreman - Compute resources
 * Image-based deployment on Proxmox fails due to extra newline in "remote_execution_ssh_keys" snippet ([#37142](https://projects.theforeman.org/issues/37142))
 
 #### Foreman - Compute resources - VMware
 * VmWare - API doesn't show same info about VM as in UI ([#35248](https://projects.theforeman.org/issues/35248))
+
+#### Foreman - Database
+* Invalid kwargs handling in FindCommon ([#37273](https://projects.theforeman.org/issues/37273))
 
 #### Foreman - Host creation
 * Drop append domain names setting ([#36160](https://projects.theforeman.org/issues/36160))
@@ -60,6 +72,7 @@ Please use other backup types to replace your use of snapshot.
 * Changing the "Show New Host Overview Page" setting is not applied even after reloading the page ([#37013](https://projects.theforeman.org/issues/37013))
 
 #### Foreman - JavaScript stack
+* Fix javascript method for webpack_asset_paths  ([#37199](https://projects.theforeman.org/issues/37199))
 * Duplicate ids from webpack style ([#37173](https://projects.theforeman.org/issues/37173))
 * Load plugin public folder for webpack ([#37161](https://projects.theforeman.org/issues/37161))
 * "Component name already taken" warnings fix ([#37154](https://projects.theforeman.org/issues/37154))
@@ -77,6 +90,8 @@ Please use other backup types to replace your use of snapshot.
 * Grammatical error in Realm description in WebUI ([#37120](https://projects.theforeman.org/issues/37120))
 
 #### Foreman - Reporting
+* Satellite "Registered Content Hosts" report generates incorrect hosts' kernel version  ([#37184](https://projects.theforeman.org/issues/37184))
+* Host - Statuses report failing "unknown keywords: :Name, :Global" ([#37065](https://projects.theforeman.org/issues/37065))
 * Getting "undefined method '#name' for NilClass::Jail (NilClass) (Safemode::NoMethodError)" error generating subscription report  ([#37016](https://projects.theforeman.org/issues/37016))
 * Hammer Report-Template Complains about 'Input Days from Now' Being Blank ([#32359](https://projects.theforeman.org/issues/32359))
 
@@ -123,6 +138,7 @@ Please use other backup types to replace your use of snapshot.
 * Make foreman-debug optional ([#37022](https://projects.theforeman.org/issues/37022))
 
 #### Packaging - RPMs
+* rubygem-ipmitool is missing ipmitool dependency ([#37246](https://projects.theforeman.org/issues/37246))
 * Add python-setuptools as an installation dependency for EL6 katello-host-tools ([#37106](https://projects.theforeman.org/issues/37106))
 
 *A full list of changes in 3.10.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1789)*
