Replace {EL} attribute with explicit value
This attribute exists in foreman-documentation, but not here.

--- a/_includes/manuals/3.10/1.2_release_notes.md
+++ b/_includes/manuals/3.10/1.2_release_notes.md
@@ -4,10 +4,10 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
-#### Experimental {EL} 9 support
+#### Experimental Enterprise Linux 9 support
 
-This is the first release to provide {EL} 9 packages.
-{EL} 9 comes with Ruby 3 and it may affect your templates.
+This is the first release to provide Enterprise Linux 9 packages.
+Enterprise Linux 9 comes with Ruby 3 and it may affect your templates.
 Right now there's no guidance on upgrading.
 Because of this it's considered experimental.
 Foreman 3.11 plans to provide this.
