Correct upgrade warnings & deprecations for Foreman 3.9

--- a/_includes/manuals/3.9/1.2_release_notes.md
+++ b/_includes/manuals/3.9/1.2_release_notes.md
@@ -18,17 +18,20 @@ Default installations will now use Redis configured as the default cache type. U
 
 ### Upgrade warnings
 
-#### `ct_command` and `fcct_command` settings replaced with `(fc)ct_location` and `(fc)ct_arguments`
+#### Fedora/Red Hat Atomic is no longer supported
 
-To fix [CVE-2022-3874](/security.html#2022-3874) the settings for the CoreOS and Fedora CoreOS
-transpiler commands were changed to individual settings for the location of the binary and the
-arguments passed to it.
-During the upgrade the location of the binaries will be automatically changed to `/usr/bin/ct`
-and `/usr/bin/fcct`. Setting the binary location to any other path requires changes to
-`settings.yaml`, as different locations are forbidden by default.
-The arguments are automatically migrated from the old settings to the new ones.
+Red Hat Atomic went end of life in 2021 and Fedora Atomic even earlier.
+Starting with Foreman 3.9, these will be recognized as regular Fedora or Red Hat.
+The installation medium is no longer created, and provisioning templates have dropped support.
+
+#### Short names of hosts in API calls are no longer supported
+
+With host names stored as FQDN (Fully Qualified Domain Names) in Foreman, you can no longer use short names to retrieve the host resource in the Foreman API, such as https://foreman/api/hosts/:hostname.
+Use FQDN to identify the hosts.
 
 ### Deprecations
+
+There are no deprecations with Foreman 3.9.
 
 ### Release Notes
 
