--- a/_includes/manuals/3.9/1.2_release_notes.md
+++ b/_includes/manuals/3.9/1.2_release_notes.md
@@ -32,6 +32,22 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release Notes
 
+### Release notes for 3.9.2
+#### Foreman - JavaScript stack
+* EditorView snapshots change because of classnames update ([#37026](https://projects.theforeman.org/issues/37026))
+
+#### Foreman - Reporting
+* Getting "undefined method '#name' for NilClass::Jail (NilClass) (Safemode::NoMethodError)" error generating subscription report ([#37016](https://projects.theforeman.org/issues/37016))
+
+#### Foreman - Web Interface
+* Closing parent nav should also close child nav ([#37067](https://projects.theforeman.org/issues/37067))
+* Expanding a section should collapse other expanded sections ([#37025](https://projects.theforeman.org/issues/37025))
+
+#### Packaging - RPMs
+* rubygem-ipmitool is missing ipmitool dependency ([#37246](https://projects.theforeman.org/issues/37246))
+
+*A full list of changes in 3.9.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1799)*
+
 ### Release notes for 3.9.1
 #### Foreman
 * broken link in Register Host documentation  ([#36966](https://projects.theforeman.org/issues/36966))
