--- a/_includes/manuals/3.9/1.2_release_notes.md
+++ b/_includes/manuals/3.9/1.2_release_notes.md
@@ -32,6 +32,16 @@ The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release Notes
 
+### Release notes for 3.9.3
+#### Foreman - Tests
+* Bump theforeman/vendor-dev to 13.0.1 ([#37360](https://projects.theforeman.org/issues/37360))
+* Use @redhat-cloud-services/frontend-components-utilities@4.0.7 ([#37312](https://projects.theforeman.org/issues/37312))
+
+#### Installer - Foreman modules
+* During upgrade to Katello 4.11 issues are seen with Candlepin keystore ([#37384](https://projects.theforeman.org/issues/37384))
+
+*A full list of changes in 3.9.3 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1825)*
+
 ### Release notes for 3.9.2
 #### Foreman - JavaScript stack
 * EditorView snapshots change because of classnames update ([#37026](https://projects.theforeman.org/issues/37026))
