--- a/_includes/manuals/3.11/3.6_upgrade.md
+++ b/_includes/manuals/3.11/3.6_upgrade.md
@@ -35,7 +35,7 @@ $(document).ready(function() {
 To provide specific installation instructions, please select your operating system:
 <select id="upgrade_os" onChange="update_upgrade_os(this);">
   <option value="none">-- select operating system --</option>
-  <option value="el8">CentOS Stream 8 / Red Hat Enterprise Linux 8</option>
+  <option value="el8">Red Hat Enterprise Linux 8</option>
   <option value="el9">CentOS Stream 9 / Red Hat Enterprise Linux 9</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
